@@ -7,6 +7,7 @@ Jacksum 3.8.0, TBD
   - Don't ignore records with same comments in wanted list files.
     While ignoring duplicate file names in check files makes sense for the option --check-file, that setting is
     suboptimal if option --wanted-list is used, because filenames are treated as comments in wanted lists.
+  - OOM can occur if producer is much faster than the consumer threads
 
 - improved performance:
 
